# upchallenge

./: .env  .env.example  .gitignore  Cargo.toml  readme.md
migrations/2020-03-16-190930_create_posts/: up.sql
migrations/2020-03-16-211505_create_users/: up.sql
migrations/2020-03-16-212604_create_posts/: up.sql
src/: api.rs  lib.rs  main.rs  models.rs  schema.rs
