[package]
name = "upchallenge"
version = "0.1.0"
authors = ["Lucas S. Vieira <lucassouzavieiraengcomp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
env_logger = "0.6"
diesel = {version = "1.4.3", features=["mysql"]}
dotenv = "0.9.0"
serde = {version = "1.0", features = ["derive"]}
